SigmaCodebackup3rdSep/objects/Package_Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaged_Product__c</fullName>
        <label>Packaged Product</label>
        <referenceTo>PackagedProducts__c</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Serial Number</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Package Product Line Items</relationshipLabel>
        <relationshipName>Package_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Package Product Line Item</label>
    <nameField>
        <displayFormat>PPLI-{0000}</displayFormat>
        <label>Package Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>